Changes to support the frontend data pane
fixes #277 and requires frontend branch 277-document-pane
