# crc/api/file.py
@@ -7,8 +7,60 @@ from flask import send_file
 from crc import session
 from crc.api.common import ApiError
 from crc.models.file import FileSchema, FileModel, File, FileModelSchema, FileDataModel
+from crc.models.api_models import DocumentDirectory, DocumentDirectorySchema
 from crc.models.workflow import WorkflowSpecModel
 from crc.services.file_service import FileService
+
+def ensure_exists(output,categories,expanded):
+    """
+    This is a recursive function, it expects a list of
+    levels with a file object at the end (kinda like duck,duck,duck,goose)
+
+    for each level, it makes sure that level is already in the structure and if it is not
+    it will add it
+
+    function terminates upon getting an entry that is a file object ( or really anything but string)
+    """
+    currentitem = categories[0]
+    found = False
+    if isinstance(currentitem,str):
+        for item in output:
+            if item.level == currentitem:
+                found = True
+                item.filecount = item.filecount + 1
+                item.expanded = expanded
+                ensure_exists(item.children,categories[1:],expanded)
+        if not found:
+            newlevel = DocumentDirectory(level=currentitem)
+            newlevel.filecount = 1
+            newlevel.expanded = expanded
+            output.append(newlevel)
+            ensure_exists(newlevel.children,categories[1:],expanded)
+    else:
+        newlevel = DocumentDirectory(file=currentitem)
+        newlevel.expanded = expanded
+        output.append(newlevel)
+
+
+def get_document_directory(study_id,workflow_id=None):
+    """
+    return a nested list of files arranged according to the category hirearchy
+    defined in the doc dictionary
+    """
+    output = []
+    doc_dict = FileService.get_doc_dictionary()
+    file_models = FileService.get_files_for_study(study_id=study_id)
+    files = (to_file_api(model) for model in file_models)
+    for file in files:
+        doc_code = doc_dict[file.irb_doc_code]
+        if workflow_id:
+            expand = file.workflow_id == int(workflow_id)
+        else:
+            expand = False
+        print(expand)
+        categories = [x for x in [doc_code['category1'],doc_code['category2'],doc_code['category3'],file] if x != '']
+        ensure_exists(output,categories,expanded=expand)
+    return DocumentDirectorySchema(many=True).dump(output)
 
 
 def to_file_api(file_model):
